# metagraphed

./: .env.example  .gitattributes  .gitignore  .gittensory.yml  .prettierignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  HIGH_SCORE.md  PR-feat-slim-search-index.md  PR-fix-windows-repo-root.md  README.md  RELEASING.md  SECURITY.md  _pr2622_comment.md  _prbody.md  _prtitle.txt  bunfig.toml  coverage-out.txt  entrypoint.sh  eslint.config.mjs  node_modules  package-lock.json  package.json  pr.md  progress.json  release-notes.md  renovate.json  run-archive.sh  run-onf.sh  run.sh  server.json  vitest.config.mjs  wrangler.data.jsonc  wrangler.jsonc  wrangler.neurons-sync.jsonc  (+2 more)
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: pull_request_template.md  release.yml
.lovable/: plan.md
deploy/: README.md  __public_safety_test__fixture__.md  chain-firehose-relay.Dockerfile  docker-compose.yml  economics-refresh.Dockerfile  hyperdrive-cutover.md  indexer.Dockerfile  railway-bootstrap.sh
docs/: agent-tools.md  all-subnet-registry.md  apex-agent-discovery.md  apex-cutover-runbook.md  api-stability.md  backend-artifact-contracts.md  beta-roadmap.md  block-explorer-data-model.md  cloudflare-backend.md  computed-metrics-methodology.md  curation-playbook.md  idle-stake-mechanism.md  integration-readiness.md  operations.md  realtime-firehose.md  realtime-streamer.md  submission-gate.md  typescript-migration-checklist.md  vision.md
docs-site/: README.md  meta.json
public/: agent.md  (+6 more)
(+3111 files in other folders)
